; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_version.c_maybe_intro_message.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_version.c_maybe_intro_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }
%struct.TYPE_3__ = type { i32* }

@curbuf = common dso_local global %struct.TYPE_4__* null, align 8
@p_shm = common dso_local global i32 0, align 4
@SHM_INTRO = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@firstwin = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @maybe_intro_message() #0 {
  %1 = call i64 (...) @bufempty()
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %16

3:                                                ; preds = %0
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @curbuf, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %16

8:                                                ; preds = %3
  %9 = load i32, i32* @p_shm, align 4
  %10 = load i32, i32* @SHM_INTRO, align 4
  %11 = call i32* @vim_strchr(i32 %9, i32 %10)
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %8
  %14 = load i32, i32* @FALSE, align 4
  %15 = call i32 @intro_message(i32 %14)
  br label %16

16:                                               ; preds = %13, %8, %3, %0
  ret void
}

declare dso_local i64 @bufempty(...) #1

declare dso_local i32* @vim_strchr(i32, i32) #1

declare dso_local i32 @intro_message(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
